added scoring, working on start button

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <section id="board">
-
-
     </section>
-
+    <section id="interface">
+        <b id="score">0</b>
+        <button id="play">Play</button>
+        <div id="rules"></div>
+    </section>
 
 
     <script src="script.js"></script>
