start and reset buttons implemented

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section id="interface">
         <b id="score">0</b>
         <button id="play">Play</button>
+        <button id="reset">Reset</button>
         <div id="rules"></div>
     </section>
 
