--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <section id="header">
+        <h1>Snek Snack</h1>
+    </section>
     <section id="board">
     </section>
     <section id="interface">
-        <b id="score">0</b>
-        <button id="play">Play</button>
-        <button id="reset">Reset</button>
-        <div id="rules"></div>
+        <div id="scoreBoard">
+            <b>Score</b>
+            <b id="score">0</b>
+        </div>
+        <div id="buttonsArea">
+            <button class="interfaceButton" id="play">Play</button>
+            <button class="interfaceButton" id="reset">Reset</button>
+        </div>
+        <div id="rules">
+            <p>Move your snake with arrow keys or WASD to eat the red apples. Be careful to avoid running into the walls or your own tail.</p>
+            <p>Blue obstacles will kill you if you run into them, but if surrounded on three side by your snake they will drop a golden apple that can be eaten for bonus points.</p>
+        </div>
     </section>
 
 
