--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section id="interface">
         <div id="scoreBoard">
-            <b>Score</b>
+            <b>Score:</b>
             <b id="score">0</b>
         </div>
         <div id="buttonsArea">
