added high score tracking and collision styling on snake

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div id="scoreBoard">
             <b>Score:</b>
             <b id="score">0</b>
+            <b>High Score:</b>
+            <b id="highScore">0</b>
         </div>
         <div id="buttonsArea">
             <button class="interfaceButton" id="play">Play</button>
@@ -27,6 +29,7 @@
             <p>Blue obstacles will kill you if you run into them, but if surrounded on three side by your snake they will drop a golden apple that can be eaten for bonus points.</p>
         </div>
     </section>
+    <footer>ccc</footer>
 
 
     <script src="script.js"></script>
