updated styling on speed buttons. High score now has styling to indicate what speed it was achieved at.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </div>
         <div id="rules">
             <p>Move your snake with arrow keys or WASD to eat the red apples. Be careful to avoid running into the walls or your own tail.</p>
-            <p>Blue obstacles will kill you if you run into them, but if surrounded on three side by your snake they will drop a golden apple that can be eaten for bonus points.</p>
+            <p>Blue obstacles will kill you if you run into them, but when "constricted" (surrounded on three sides by your snake) they will drop a golden apple that can be eaten for bonus points.</p>
         </div>
     </section>
-    <footer>ccc</footer>
+    <footer>Robert_Buskirk-Lechner: <a href="https://github.com/robert-bl" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/robert-buskirk-lechner-b54a7b76/" target="_blank">LinkedIn</a> </footer>
 
 
     <script src="script.js"></script>
